--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 project ("HytaleToOBJ")
 
 # Add source to this project's executable.
-add_executable (HytaleToOBJ "src/HytaleToOBJ.cpp"  "src/data/WorldData.h" "src/data/MeshData.h" "src/data/BlockModel.h" "src/geometry/MeshBuilder.h" "src/geometry/MeshBuilder.cpp" "src/geometry/BlockModelRegistry.cpp" "src/output/OBJExporter.h" "src/output/OBJExporter.cpp" "src/output/stb/stb_impl.cpp" "src/Export.h" "src/Export.cpp" "src/geometry/TextureRegistry.cpp" "src/geometry/BlockIDMappings.cpp")
+add_executable (HytaleToOBJ "src/HytaleToOBJ.cpp"  "src/data/WorldData.h" "src/data/MeshData.h" "src/data/Model.h" "src/geometry/MeshBuilder.h" "src/geometry/MeshBuilder.cpp" "src/geometry/ModelRegistry.cpp" "src/output/OBJExporter.h" "src/output/OBJExporter.cpp" "src/output/stb/stb_impl.cpp" "src/Export.h" "src/Export.cpp" "src/geometry/TextureRegistry.cpp" "src/geometry/BlockIDMappings.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET HytaleToOBJ PROPERTY CXX_STANDARD 20)
